# PrivMemAgent

./: .gitignore  NOTICE.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements-legacy.txt  requirements-train.txt  requirements-vllm.txt  requirements.txt
data/: memory_eval_smoke.jsonl  memprivacy_bench_testset.jsonl  personamem_v2_testset.jsonl
docs/: BASELINE_COMPARISON_AND_INNOVATION.md  CORRECTNESS_NOTES.md  INNOVATION_ROADMAP.md  LEARNED_MODULE_DEVELOPMENT_PLAN.md  MEMORY_EVAL_RUNBOOK.md  PRELIMINARY_RESULTS.md  TASK_AWARE_REVERSIBLE_MASKING_DESIGN.md  implementation_audit.md  minimal_sufficient_privacy_memory.md  paper_concept_pma.md  pma_code_development_plan.md  trainable_privacy_memory_abstractor.md
evaluation/: __init__.py  build_pma_candidates.py  build_pma_train_data.py  cloud_safe_guard.py  compare_pma_results.py  eval.py  eval_config.deepseek.yaml  eval_config.yaml  eval_langmem.py  eval_mem0.py  eval_memobase.py  eval_pma_mem0.py  eval_public_memory.py  metric.py  privacy_masking.py  score_pma_candidates.py  utils.py
src/: __init__.py  abstraction_generator.py  alias_router.py  context_minimizer.py  leakage_auditor.py  llm_clients.py  memory_backends.py  policy.py  privacy_abstraction.py  privacy_abstraction_config.yaml  privacy_auditor.py  privacy_config.yaml  privacy_critic.py  privacy_masking.py  privacy_schema.py  provenance.py  public_memory_compiler.py  public_memory_config.yaml  qa_evaluation.py  query_broker.py  sufficiency_selector.py  utility_auditor.py  utility_leakage_selector.py
tests/: test_abstraction_generator.py  test_adversarial_audit.py  test_ama_matching.py  test_auditor_isolation.py  test_cloud_safe_guard.py  test_config_env.py  test_context_minimizer.py  test_dataset_validator.py  test_eval.py  test_eval_public_memory.py  test_launch_memprivacy4b_full_experiments.py  test_learned_attribute_attack.py  test_learned_public_memory_modules.py  test_learned_training_builders.py  test_materialize_eval_config.py  test_memory_eval_smoke_data.py  test_memory_evaluation_integration.py  test_metric.py  test_pma_backends.py  test_pma_selection.py  test_policy.py  test_preflight_memory_eval.py  test_privacy_abstraction_schema.py  test_privacy_masking.py  test_provenance.py  test_public_memory_budget_selector.py  test_public_memory_budget_sweep.py  test_public_memory_compiler.py  test_repository_completeness.py  test_result_contract.py  test_sufficiency_selector.py  test_training_data_builder.py  test_utility_auditor.py  test_utility_leakage_selector.py  test_utility_scoring.py  test_utils.py
tools/: adversarial_audit.py  launch_memprivacy4b_full_experiments.py  learned_attribute_attack.py  materialize_eval_config.py  preflight_memory_eval.py  public_memory_budget_selector.py  public_memory_budget_sweep.py  (+2 more)
(+17 files in other folders)
