[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privmemagent"
version = "0.1.0"
description = "Minimal sufficient public-memory learning for privacy-preserving edge-cloud agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "json-repair>=0.55.1,<0.56.0",
  "openai>=2.15.0,<3.0.0",
  "pyyaml>=6.0,<7.0",
  "tenacity>=9.1.2,<10.0.0",
  "tqdm>=4.67.1,<5.0.0",
]

[project.optional-dependencies]
mem0 = [
  "chromadb>=1.5.2,<2.0.0",
  "mem0ai>=1.0.5,<2.0.0",
]
train = [
  "accelerate>=1.7,<2.0",
  "datasets>=3.6,<5.0",
  "peft>=0.15,<1.0",
  "torch>=2.4",
  "transformers>=4.52,<5.0",
  "trl>=0.19,<2.0",
]
legacy = [
  "transformers>=4.52,<5.0",
  "vllm>=0.9",
]
dev = [
  "bandit>=1.8,<2.0",
  "pytest>=8.3,<10.0",
  "pytest-cov>=6.0,<8.0",
  "ruff>=0.11,<1.0",
]

[tool.setuptools]
packages = ["src", "evaluation", "training"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
  "src/privacy_masking.py",
  "evaluation/eval.py",
  "evaluation/eval_langmem.py",
  "evaluation/eval_mem0.py",
  "evaluation/eval_memobase.py",
  "evaluation/metric.py",
  "evaluation/privacy_masking.py",
  "evaluation/utils.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
